css/jsme-nick-36.css
/* ... */
.infoLegend {
  font-family: "Roboto Condensed", sans-serif;
  font-size: 0.875rem;
  color: #666;
  background-color: #eee;
  padding: 4px 20px;
  /* border-radius: 2px; */
  /* display: inline-block; */
  margin-bottom: 10px;
}

#infoGMT .infoLegend {
  font-family: "Roboto", sans-serif;
  font-size: 1rem;
  color: #111;
  background-color: #fff;
  padding: 4px 20px;
  text-align: center;
  margin-top: 10px;
}

.infoHomoName {
  font-size: 1.25rem;
  margin-left: 20px;
  margin-bottom: 10px;
}

.infoGMTFormula {
  /* font-family: 'Roboto Condensed', sans-serif; */
  font-size: 1.375rem;
  /* margin-left: 20px; */
  margin-bottom: 10px;
  text-align: center;
}

.radioMenuContainer .infoGMTFormula {
  font-size: 1.25rem;
  margin: 0;
  margin-left: 20px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.radioMenuContainer .infoN {
  font-size: 1.25rem;
}

.infoN {
  /* display: inline-block; */
  font-size: 1.375rem;
  text-align: center;

  /* font-family: 'Roboto Condensed', sans-serif; */
}

#molName {
  display: none;
}

.infoMolName {
  font-size: 1.25rem;
  text-align: center;
  margin-top: 10px;
  margin-bottom: 10px;
  /* margin-left: 20px; */
  /* display: inline-block; */
}

.homo.formula {
  font-family: "Roboto", sans-serif;
  font-size: 1.375rem;
  /* margin-left: 20px; */
  /* margin-bottom: 10px; */
  text-align: center;
  display: block;
}

.bondSymbol {
  display: inline-block;
  margin-left: 2px;
  margin-right: 2px;
}

.bondSymbol.large {
  font-size: large;
}

.bondSymbol.small {
  font-size: small;
}

/* //////////////   NOMECLATURE ////////////////////// */

/* .nameAnalysisContainer {
    display: flex;
} */

.nameCompContainer {
  display: flex;
  flex-wrap: wrap;
  margin-top: 10px;
  align-items: center;
  justify-content: center;
}

.nameCompBox {
  font-size: 1.1rem;
  font-weight: bold;
  color: #000;
  padding: 5px 8px;
  border: 2px solid #ddd;
  cursor: pointer;
  transition: all 0.3s;
  /* border-radius: 3px; */
  margin-right: -2px;
}

.euphonyLetter {
  color: var(--lightBlue);
}

.selected .euphonyLetter{
  color:rgba(200,255,255,0.8)
}

.nameCompPlus {
  font-size: 1.85rem;
  margin-left: 5px;
  margin-right: 5px;
  display: none;
}

.nameCompBox:hover {
  border-color: var(--guiColor);
  z-index: 100;
  background-color: #fff;
  box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.5);
}

.nameCompBox.selected {
  color: #fff;
  background-color: var(--guiColor);
  position: relative;
  font-weight: bold;
  border: 2px solid var(--guiColor);
  /* box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.5); */
}

.nameCompBox.selected::after {
  content: "";
  position: absolute;
  left: calc(50% - 3px);
  top: 100%;
  width: 6px;
  height: 22px;
  background-color: var(--guiColor);
  /* box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.5); */
}

#nameAnalysis {
  /* margin-top: 10px; */
}

#nameAnalysisExplain {
  margin-top: 10px;
}

.explainText {
  padding: 10px 10px;
  font-weight: bold;
  font-size: 1rem;
  color: #fff;
  background-color: var(--guiColor);
  border-radius: 3px;
  /* box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.5); */
}

.shadow1 {
  box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.5);
}

.namingRuleTable {
  /* max-width: 320px; */
  /* padding-bottom: 20px; */
}

.ruleCase,
.ruleName {
  color: #333;
  text-align: center;
}

/* .ruleCase {} */

.ruleRow {
  padding: 5px;
  border-bottom: 1px solid #ddd;
}

.ruleRow.selected {
  font-weight: bold;
  background-color: var(--lightBlue);
  /* color: var(--baseColor); */
  /* border-color: var(--cyanDarkNick); */
}

.ruleRow.selectedA {
  font-weight: bold;
  color: var(--baseColor) !important;
  background-color: var(--veryLightBlue);
  position: relative;
}

.ruleRow.selectedA::before {
  content: "A";
  display: inline-block;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background: var(--baseColor);
  color: #fff;
  font-weight: bold;
  font-size: 1rem;
  left: 12px;
  position: absolute;
  text-align: center;
  top: calc(50% - 10px);
}

.ruleRow.selectedB {
  font-weight: bold;
  color: #fff !important;
  background-color: var(--lightBlue);
  position: relative;
}

.ruleRow.selectedB::before {
  content: "B";
  display: inline-block;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background: var(--baseColor);
  color: #fff;
  font-weight: bold;
  font-size: 1rem;
  left: 12px;
  position: absolute;
  text-align: center;
  top: calc(50% - 10px);
}

.rule4 .ruleRow.selectedB .ruleCase,
.rule4 .ruleRow.selectedB .ruleName {
  color: #fff;
}

.orderNo {
  font-weight: bold;
  color: var(--baseColor);
}

.selectedB .orderNo {
  color: #fff;
}

.hideTopRow {
  padding: 0 !important;
  border-width: 1px 0 0 0 !important;
}

.ruleRow.selected .ruleCase,
.ruleRow.selected .ruleName {
  color: #fff;
}

.ruleRow.selected.selectedA .ruleCase,
.ruleRow.selected.selectedA .ruleName {
  color: var(--baseColor);
}

.rule1 .ruleCase,
.rule1 .ruleName {
  text-align: center;
  width: 50%;
}

.rule2 .ruleCase {
  width: 60%;
}

.rule2 .ruleName {
  width: 40%;
}

.rule3 .ruleCase {
  width: 67%;
}

.ruleTheory {
  margin-top: 0px;
}

.rule3 .ruleName {
  width: 33%;
}

.rule4 .ruleCase {
  text-align: left;
  padding-left: 40px;
  width: 60%;
}

.rule4 .ruleName {
  width: 40%;
}

.ruleTable {
  box-sizing: border-box;
  width: 100%;
  /* padding-left: 10px; */
  background-color: #fff;
  border: 1px solid var(--baseColor);
  border-top: 0;
}

.ruleTile {
  font-weight: bold;
  color: var(--baseColor);
  background-color: #fff;
  padding: 10px;
  padding-bottom: 5px;
  padding-left: 35px;
  position: relative;
  cursor: pointer;
  transition: all 0.3s;
  /* border-bottom: 1px solid #fff; */
  /* padding-bottom: 0; */
}

/* .ruleTile:hover {
    border-bottom: 1px solid #ddd;
} */

.ruleTile.open {
  border-bottom: 1px solid #ddd;
}
/* ... */

